fix z-index

--- a/Resources/assets/sass/app.scss
+++ b/Resources/assets/sass/app.scss
@@ -62,3 +62,8 @@
 @import "components/pristine";
 
 @import 'filament.esm.css';
+
+
+#wrapperHeader{
+    z-index:10000;
+}
